--- a/styles/style.css
+++ b/styles/style.css
@@ -44,4 +44,53 @@
     
 }
 
+/****************** Vision ****************/
 
+.vision-title{
+    margin: 20px 0px 20px 50px;
+}
+.vision-title > h2 {
+    font-weight: 700;
+    font-size: 20px;
+}
+.vision-title > p{
+    font-weight: 400;
+    font-size: 10px;
+    color: #595757;
+}
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+}
+.card-title > h4  {
+    font-weight: 700;
+    font-size: 14px;
+}
+.card-title > p {
+    font-weight: 400;
+    font-size: 10px;
+    color: #5b5a5a;
+    width: 280px;
+}
+.card-img >img {
+    height: 30px;
+}
+.card{
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 18px;
+    padding: 20px;
+}
+#first-card{
+    background-color:#5490F5;
+}
+
+.blue-btn{
+    color: black;
+    background-color: blue;
+}
+
+/******** Recent-News *********/
