--- a/styles/style.css
+++ b/styles/style.css
@@ -11,28 +11,29 @@
 .banner{
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 16px;
-    background-color: #C6E4D6;
+    /* background-color: #C6E4D6; */
+    background-color: rgb(176, 203, 176);
     border-radius: 18px;
-    margin: auto;
 }
 .banner-img > img {
-    height: 250px;
-    width: 300px;
+    height: 350px;
+    width: 400px;
+    padding: 40px 150px 40px 5px;
 }
 .banner-title {
-    margin: 60px 10px 70px 100px;
+    padding: 40px 10px 40px 170px;
 }
 .title {
     font-weight: 700;
-    font-size: 26px;
+    font-size: 46px;
     color: #0E0E0E;
-    width: 309px;
 }
 .banner-text {
-    color: #787878;
+    color: #939292;
     font-weight: 500;
-    font-size: 10px;
+    font-size: 18px;
 }
 .dark-green-btn{
     background-color: #006A50;
@@ -40,43 +41,53 @@
     padding: 8px 14px 8px 14px;
     color: white;
     font-weight: 600;
-    font-size: 9px;
+    font-size: 16px;
     
 }
 
 /****************** Vision ****************/
-
+.vision{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .section-title{
-    margin: 20px 0px 20px 50px;
+    margin: 20px 0px 0px 50px;
 }
 .section-title h2 {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 38px;
 }
 .section-title > p{
     font-weight: 400;
-    font-size: 10px;
+    font-size: 16px;
     color: #595757;
 }
 .cards {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 20px;
+    margin: 40px;
 
+}
+.card-title{
+    padding:0px 20px 10px 20px;
 }
 .card-title > h4  {
     font-weight: 700;
-    font-size: 14px;
+    font-size: 20px;
 }
 .card-title > p {
     font-weight: 400;
-    font-size: 10px;
+    font-size: 14px;
+    width: 300px;
+    height: 50px;
     color: #5b5a5a;
-    width: 280px;
 }
 .card-img >img {
-    height: 30px;
+    height: 0px 40px 20px 0px ;
+    padding: 20px 40px 0px 40px;
 }
 .card{
     background-color: white;
@@ -85,44 +96,159 @@
     padding: 20px;
 }
 #first-card{
-    background-color:#5490F5;
+    background-color:skyblue;
+}
+
+#second-card {
+    background-color: rgb(153, 238, 153);
+}
+#third-card{
+    background-color: rgb(228, 228, 143);
 }
 
 .blue-btn{
-    color: black;
     background-color: blue;
+    border-radius: 8px;
+    padding: 8px 14px 8px 14px;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
+}
+.green-btn{
+    background-color: green;
+    border-radius: 8px;
+    padding: 8px 14px 8px 14px;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
+}
+.yellow-btn{
+    background-color: rgb(156, 156, 7);
+    border-radius: 8px;
+    padding: 8px 14px 8px 14px;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 /******** Recent-News *********/
 
-.sat-card-1{
-    background-color: wheat;
-    padding: 20px 40px 20px 40px;
-    margin: 20px;
+.recent-news {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+justify-content: center;
+background-color: rgb(213, 212, 212);
 }
 .sat-card-1{
     display: flex;
     justify-content: center;
+    align-items: center;
     gap:50px;   
+    background-color: beige;
+    border-radius: 20px;
+    margin: 20px 40px 40px 40px;
+    padding: 30px 40px 20px 40px;
 }
 .satellite-img > img {
-    height: 220px;
-    width: 300px;
+    height: 280px;
+    width: 350px;
     border-radius: 30px;
    
 }
 .satellite-info > h3 {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 26px;
 }
 .satellite-info > img{
     height: 20px;
 }
-.satellite-info > time ,p  {
-    font-size: 10px;
+.satellite-info > time  {
+    font-size: 12px;
     font-weight: 400;
 }
-#sat-pera{
-    padding-right:250px;
+.sat-card-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:50px;   
+    background-color: beige;
+    border-radius: 20px;
+    margin: 20px 40px 40px 40px;
+    padding: 30px 40px 20px 40px;
 }
 
+/*********** Donate Today ***********/
+.donation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0px;
+    padding-bottom: 40px;
+}
+.donation-title{
+    text-align: center;
+}
+.donation-text{
+    text-align: center;
+}
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40PX;
+}
+.box > h2{
+    border: 1px solid black;
+    padding: 25px;
+    border-radius: 25px;
+}
+.blue-card {
+    background-color: skyblue;
+}
+.other-amount >input{
+    width: 700px;
+    height: 30px;
+    border-radius: 20px;
+    font-size: 16px;
+    text-align: center;
+}
+
+/***************** subscription area **************/
+
+.Subscribe{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(202, 235, 202);
+    border-radius: 10px;
+    padding-bottom: 40px;
+    margin: 10px 0px;
+}
+.subscribe-title{
+    text-align: center;
+}
+.subscribe-text{
+    text-align: center;
+    padding: 0px 100px;
+}
+.subscription-area{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.input-area > input {
+    width: 500px;
+    height: 35px;
+    border-radius: 6px;
+    font-size: 16px;
+    padding: 0px 20px;
+}
+
+.subscribe-btn > button {
+    border-radius: 6px;
+    height: 40px;
+}
