--- a/styles/style.css
+++ b/styles/style.css
@@ -275,6 +275,11 @@
     background-color: whitesmoke;
     border-radius: 20px;
 }
+
+.donation:hover {
+    background-color: gainsboro; 
+}
+
 .donation-title{
     text-align: center;
 }
